--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           <li>ipfs-npm init</li>
           <li>ipfs-npm install --save bignumber</li>
           <li>offline</li>
+          <li>turn off wifi</li>
           <li>ipfs-npm install --save bignumber --request-retries=1</li>
         </aside>
       </section>
@@ -111,6 +112,13 @@
         <li class="bullet">https://github.com/zkat/pacote/pull/173</li>
         <li class="bullet">Publish a packument over IPNS</li>
         <pre class="bullet">"my-module": "ipns://Qmfoo#^1.0.0"</pre>
+      </section>
+      <section>
+        <h2>npm-in-a-box</h2>
+        <li class="bullet">A local-network npm proxy on a Raspberry Pi</li>
+        <li class="bullet">Cache npm modules for you</li>
+        <li class="bullet">Connected to the IPFS network</li>
+        <li class="bullet">Publish IPNS names for your published modules</li>
       </section>
       <section>
         <h2>Thanks!</h2>
