--- a/index.html
+++ b/index.html
@@ -75,8 +75,14 @@
       </section>
       <section>
         <h1>Demo</h1>
+      </section>
+      <section>
+        <div id="terminal"></div>
         <aside style="font-size: 50px">
-          <li>ipfs-npm init</li>
+          <li>npm install ipfs-npm</li>
+          <li>mkdir foo</li>
+          <li>cd foo</li>
+          <li>ipfs-npm init -y</li>
           <li>ipfs-npm install --save bignumber</li>
           <li>offline</li>
           <li>turn off wifi</li>
@@ -119,6 +125,7 @@
         <li class="bullet">Cache npm modules for you</li>
         <li class="bullet">Connected to the IPFS network</li>
         <li class="bullet">Publish IPNS names for your published modules</li>
+        <li class="bullet">IPFS Camp Science Fair Project!</li>
       </section>
       <section>
         <h2>Thanks!</h2>
