--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <aside style="font-size: 50px">
           <li>npm</li>
           <li>largest package registry in the world</li>
-          <li>over 850k packages</li>
+          <li>over 1m packages</li>
           <li>over 36 billion downloads a month</li>
         </aside>
       </section>
